--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -34,6 +34,7 @@ CFLAGS = -std=c99 @CFLAGS@ @WXBASE_CFLAGS@ -DCBC -I../../common -I../../../commo
 CXXFLAGS = @CXXFLAGS@ @WXBASE_CXXFLAGS@
 CPPFLAGS = @CPPFLAGS@ @WXBASE_CPPFLAGS@ -fno-var-tracking-assignments -I../../common -I../../../common -I../../../common/lua -I../../../common/lua/src
 CPPFLAGS += $(MONGOOSE_CFLAGS)
+
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@ 
 ifeq ($(STATIC),yes)
@@ -41,6 +42,7 @@ EXTRALIBS += @WXBASE_LIBS@
 else
 EXTRALIBS += @WXBASE_STATIC_LIBS@
 endif
+
 STRIP = strip
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_DATA = ${INSTALL} -m 644
@@ -121,7 +123,7 @@ ALWAYS_BUILD =
 all: vscpd 
 
 install: all
-	strip vscpd
+	$(STRIP) vscpd
 	$(INSTALL_PROGRAM) vscpd $(bindir)
 
 uninstall: 
