--- a/configure.ac
+++ b/configure.ac
@@ -88,6 +88,7 @@ AC_SUBST(WXGTK_CPPFLAGS)
 AC_SUBST(WXGTK_CXXFLAGS)
 AC_SUBST(WXGTK_CFLAGS)
 AC_SUBST(WXGTK_LIBS)
+AC_SUBST(WXGTK_STATIC_LIBS)
 AC_SUBST(STATIC)
 
 dnl
@@ -186,6 +187,7 @@ WXGTK_CPPFLAGS=`$WX_CONFIG_WITH_ARGS -debug --cppflags`
 WXGTK_CXXFLAGS=`$WX_CONFIG_WITH_ARGS --debug --cxxflags`
 WXGTK_CFLAGS=`$WX_CONFIG_WITH_ARGS --debug --cflags`
 WXGTK_LIBS=`$WX_CONFIG_WITH_ARGS --debug --libs`
+WXGTK_STATICLIBS=`$WX_CONFIG_WITH_ARGS --debug --static --libs`
 else
 WXBASE_CPPFLAGS=`$WX_CONFIG_WITH_ARGS --cppflags base`
 WXBASE_CXXFLAGS=`$WX_CONFIG_WITH_ARGS --cxxflags base`
@@ -196,6 +198,7 @@ WXGTK_CPPFLAGS=`$WX_CONFIG_WITH_ARGS --cppflags`
 WXGTK_CXXFLAGS=`$WX_CONFIG_WITH_ARGS --cxxflags`
 WXGTK_CFLAGS=`$WX_CONFIG_WITH_ARGS --cflags`
 WXGTK_LIBS=`$WX_CONFIG_WITH_ARGS --libs`
+WXGTK_STATICLIBS=`$WX_CONFIG_WITH_ARGS --static --libs`
 fi 
 
 if test "${vscp_static}" = yes ; then
