--- a/src/vscp/mkpasswd/Makefile.in
+++ b/src/vscp/mkpasswd/Makefile.in
@@ -28,6 +28,7 @@ WXGTK_CPPFLAGS = @WXGTK_CPPFLAGS@
 WXGTK_CXXFLAGS = @WXGTK_CXXFLAGS@
 WXGTK_CFLAGS = @WXGTK_CFLAGS@
 WXGTK_LIBS = @WXGTK_LIBS@
+WXGTK_STATIC_LIBS = @WXGTK_STATIC_LIBS@
 
 MONGOOSE_CFLAGS = -DMG_ENABLE_THREADS -DMG_ENABLE_IPV6 -DMG_ENABLE_SSL -DMG_ENABLE_HTTP_CGI -DMG_ENABLE_HTTP_SSI -DMG_ENABLE_HTTP_SSI_EXEC -DMG_ENABLE_HTTP_WEBDAV -DMG_ENABLE_GETADDRINFO -DMG_ENABLE_HTTP_URL_REWRITES
 CFLAGS = -std=c99 @CFLAGS@ @WXBASE_CFLAGS@ -DCBC -I../common -I../../common  
@@ -38,9 +39,9 @@ CPPFLAGS += $(MONGOOSE_CFLAGS)
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@ 
 ifeq ($(STATIC),yes)
-EXTRALIBS += @WXBASE_LIBS@
-else
 EXTRALIBS += @WXBASE_STATIC_LIBS@
+else
+EXTRALIBS += @WXBASE_LIBS@
 endif
 
 STRIP = strip
