--- a/src/vscp/vscpcmd/Makefile.in
+++ b/src/vscp/vscpcmd/Makefile.in
@@ -28,6 +28,7 @@ WXGTK_CPPFLAGS = @WXGTK_CPPFLAGS@
 WXGTK_CXXFLAGS = @WXGTK_CXXFLAGS@
 WXGTK_CFLAGS = @WXGTK_CFLAGS@
 WXGTK_LIBS = @WXGTK_LIBS@
+WXGTK_STATIC_LIBS = @WXGTK_STATIC_LIBS@
 
 #CXXFLAGS = @CXXFLAGS@
 #CPPFLAGS = @CPPFLAGS@ -D MG_ENABLE_THREADS -I../common -I../../common
@@ -42,9 +43,9 @@ CPPFLAGS += $(MONGOOSE_CFLAGS)
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@ 
 ifeq ($(STATIC),yes)
-EXTRALIBS += @WXBASE_LIBS@
-else
 EXTRALIBS += @WXBASE_STATIC_LIBS@
+else
+EXTRALIBS += @WXBASE_LIBS@
 endif
 
 STRIP = strip
