--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -115,7 +115,7 @@ VSCPD_SPECIALS = vscphelper.o \
 	aes.o\
 	fastpbkdf2.o\
 	vscpmd5.o\
-	base64.o
+	vscpbase64.o
 
 # Add object files that always should be built here
 ALWAYS_BUILD = 
@@ -174,8 +174,8 @@ aes.o: ../../../common/aes.o ../../../common/aes.h
 crc.o: ../../../common/crc.o ../../../common/crc.h 
 	$(CC) $(CFLAGS) -c ../../../common/crc.c -o $@
 	
-base64.o: ../../../common/base64.o ../../../common/base64.h 
-	$(CC) $(CFLAGS) -c ../../../common/base64.c -o $@	
+vscpbase64.o: ../../../common/vscpbase64.o ../../../common/vscpbase64.h 
+	$(CC) $(CFLAGS) -c ../../../common/vscpbase64.c -o $@	
 
 crc8.o: ../../../common/crc8.o ../../../common/crc8.h
 	$(CC) $(CFLAGS) -c ../../../common/crc8.c -o $@
