--- a/src/vscp/drivers/level2/sim/linux/Makefile.in
+++ b/src/vscp/drivers/level2/sim/linux/Makefile.in
@@ -71,7 +71,8 @@ VSCPTCPIP_OBJECTS = ../common/simulation.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
 	../../../../../common/mongoose.o\
-	../../../../../common/fastpbkdf2.o
+	../../../../../common/fastpbkdf2.o\
+	../../../../../common/vscpbase64.o
 
 PROJOBJS =  ../common/simulation.o\
 	../../../../common/vscpremotetcpif.o\
@@ -81,7 +82,8 @@ PROJOBJS =  ../common/simulation.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
 	../../../../../common/mongoose.o\
-	../../../../../common/fastpbkdf2.o
+	../../../../../common/fastpbkdf2.o\
+	../../../../../common/vscpbase64.o
 
 ALWAYS_BUILD = 	../../../../common/vscpremotetcpif.o\
 	../../../../common/vscphelper.o\
@@ -90,7 +92,8 @@ ALWAYS_BUILD = 	../../../../common/vscpremotetcpif.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
 	../../../../../common/mongoose.o\
-	../../../../../common/fastpbkdf2.o
+	../../../../../common/fastpbkdf2.o\
+	../../../../../common/vscpbase64.o
 
 ### Targets: ###
 
