--- a/src/vscp/vscpworks/Makefile.in
+++ b/src/vscp/vscpworks/Makefile.in
@@ -97,6 +97,7 @@ VSCPWORKS_OBJECTS =  vscpworks.o dlgvscpmsg.o \
 	../../common/aes.o \
 	../../common/mongoose.o \
 	../../common/fastpbkdf2.o \
+	../../common/vscpbase64.o\
 	../common/canalsuperwrapper.o \
 	../common/dllwrapper.o \
 	../common/guid.o \
@@ -115,6 +116,7 @@ ALWAYS_BUILD = ../../common/crc.o \
 	../../common/aes.o \
 	../../common/mongoose.o \
 	../../common/fastpbkdf2.o \
+	../../common/vscpbase64.o
 	../common/canalsuperwrapper.o \
 	../common/dllwrapper.o \
 	../common/guid.o \
