--- a/src/vscp/linuxvscpl1/Makefile.in
+++ b/src/vscp/linuxvscpl1/Makefile.in
@@ -70,7 +70,8 @@ VSCPL1_OBJECTS =  vscpl1.o\
 	../../common/crc8.o\
 	../../common/aes.o\
 	../../common/mongoose.o\
-	../../common/fastpbkdf2.o
+	../../common/fastpbkdf2.o\
+	../../common/vscpbase64.o
 	
 PROJOBJS  =  ../common/vscpremotetcpif.o\
 	../common/vscphelper.o\
@@ -79,7 +80,8 @@ PROJOBJS  =  ../common/vscpremotetcpif.o\
 	../../common/crc8.o\
 	../../common/aes.o\
 	../../common/mongoose.o\
-	../../common/fastpbkdf2.o
+	../../common/fastpbkdf2.o\
+	../../common/vscpbase64.o
 
 ALWAYS_BUILD = ../common/vscpremotetcpif.o\
 	../common/vscphelper.o\
@@ -88,7 +90,8 @@ ALWAYS_BUILD = ../common/vscpremotetcpif.o\
 	../../common/crc8.o\
 	../../common/aes.o\
 	../../common/mongoose.o\
-	../../common/fastpbkdf2.o
+	../../common/fastpbkdf2.o\
+	../../common/vscpbase64.o
 
 ### Targets: ###
 
