--- a/src/vscp/vscpcmd/Makefile.in
+++ b/src/vscp/vscpcmd/Makefile.in
@@ -72,7 +72,8 @@ VSCPCMD_OBJECTS =  vscpcmd.o\
 	../common/guid.o\
 	../../common/aes.o \
 	../../common/mongoose.o\
-	../../common/fastpbkdf2.o
+	../../common/fastpbkdf2.o\
+	../../common/vscpbase64.o
 
 ALWAYS_BUILD = ../common/vscpremotetcpif.o\
 	../common/vscphelper.o\
@@ -81,7 +82,8 @@ ALWAYS_BUILD = ../common/vscpremotetcpif.o\
 	../../common/crc8.o\
 	../../common/aes.o \
 	../../common/mongoose.o\
-	../../common/fastpbkdf2.o
+	../../common/fastpbkdf2.o\
+	../../common/vscpbase64.o
 
 ### Targets: ###
 
