Fixed another project with a missing file...

--- a/src/vscp/vscp-mkpasswd/Makefile.in
+++ b/src/vscp/vscp-mkpasswd/Makefile.in
@@ -70,7 +70,8 @@ MKPASSWD_OBJECTS =  vscp-mkpasswd.o\
 	../../common/crc.o\
 	../../common/crc8.o\
 	../../common/aes.o\
-	../../common/fastpbkdf2.o
+	../../common/fastpbkdf2.o\
+	../../common/vscpbase64.o
 
 
 ALWAYS_BUILD = ../common/vscphelper.o\
