Fixed problem with admin inteface variable delete/new/save Fixed problem with Makefile for vscpworks

--- a/src/vscp/vscpworks/Makefile.in
+++ b/src/vscp/vscpworks/Makefile.in
@@ -132,7 +132,7 @@ ALWAYS_BUILD = ../../common/crc.o \
 all: vscpworks
 
 install: all
-	$(STRIP)
+	$(STRIP) vscpworks
 	$(INSTALL_PROGRAM) vscpworks $(bindir)
 
 uninstall: 
