--- a/Makefile.in
+++ b/Makefile.in
@@ -61,14 +61,17 @@ endif
 	@echo "   Have fun and remember to always be hungry and stay foolish or the other way"
 	@echo "   around be foolish - stay hungry! There is always a choice."
 config:
-	mkdir -p /srv/vscp/actions
+	mkdir -p /srv/vscp/logs
+        mkdir -p /srv/vscp/actions
 	mkdir -p /srv/vscp/scripts
 	mkdir -p /srv/vscp/ux
 	mkdir -p /srv/vscp/web
 	mkdir -p /srv/vscp/certs
 	mkdir -p /srv/vscp/drivers
 	mkdir -p /srv/vscp/level1
-	mkdir -p /srv/vscp/level2	
+	mkdir -p /srv/vscp/level2
+	mkdir -p /srv/vscp/javascript
+	mkdir -p /srv/vscp/lua
 	mkdir -p /srv/vscp/web/css
 	mkdir -p /srv/vscp/web/images
 	mkdir -p /srv/vscp/web/lib
@@ -76,6 +79,7 @@ config:
 	mkdir -p /var/log/vscp
 	mkdir -p /srv/vscp/tables
 	mkdir -p /etc/vscp
+	cp -r config_examples/certs/* /srv/vscp/certs/;
 # startup script	
 	$(INSTALL_PROGRAM) -b -m755 vscpd.startup_script_debian /etc/init.d/vscpd
 	update-rc.d vscpd defaults
