--- a/src/vscp/drivers/level2/mqtt/linux/Makefile.in
+++ b/src/vscp/drivers/level2/mqtt/linux/Makefile.in
@@ -67,6 +67,7 @@ MQTT_OBJECTS = ../common/mqttobj.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
+	../../../../../common/vscpmd5.c\
 	../../../../../common/mongoose.o\
 	../../../../../common/fastpbkdf2.o\
 	../../../../../common/vscpbase64.o
@@ -79,6 +80,7 @@ PROJOBJS =  ../common/mqttobj.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
+	../../../../../common/vscpmd5.c\
 	../../../../../common/mongoose.o\
 	../../../../../common/fastpbkdf2.o\
 	../../../../../common/vscpbase64.o
