--- a/src/vscp/drivers/level2/rawethernet/linux/Makefile.in
+++ b/src/vscp/drivers/level2/rawethernet/linux/Makefile.in
@@ -70,6 +70,7 @@ RAWETH_OBJECTS = dlldrvobj.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
+	../../../../../common/vscpmd5.c\
 	../../../../../common/fastpbkdf2.o\
 	../../../../../common/vscpbase64.o
 
@@ -79,6 +80,7 @@ PROJOBJS =  ../../../../common/vscpremotetcpif.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
+	../../../../../common/vscpmd5.c\
 	../../../../../common/mongoose.o\
 	../../../../../common/fastpbkdf2.o\
 	../../../../../common/vscpbase64.o
@@ -90,6 +92,7 @@ ALWAYS_BUILD = ../../../../common/vscpremotetcpif.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
+	../../../../../common/vscpmd5.c\
 	../../../../../common/mongoose.o\
 	../../../../../common/fastpbkdf2.o\
 	../../../../../common/vscpbase64.o
