--- a/src/vscp/drivers/level2/sim/linux/Makefile.in
+++ b/src/vscp/drivers/level2/sim/linux/Makefile.in
@@ -70,6 +70,7 @@ VSCPTCPIP_OBJECTS = ../common/simulation.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
+	../../../../../common/vscpmd5.c\
 	../../../../../common/mongoose.o\
 	../../../../../common/fastpbkdf2.o\
 	../../../../../common/vscpbase64.o
@@ -81,6 +82,7 @@ PROJOBJS =  ../common/simulation.o\
 	../../../../../common/crc.o\
 	../../../../../common/crc8.o\
 	../../../../../common/aes.o\
+	../../../../../common/vscpmd5.c\
 	../../../../../common/mongoose.o\
 	../../../../../common/fastpbkdf2.o\
 	../../../../../common/vscpbase64.o
