--- a/src/vscp/helperlib/linux/Makefile.in
+++ b/src/vscp/helperlib/linux/Makefile.in
@@ -80,6 +80,7 @@ VSCPHELPER_OBJECTS =  libvscphelper.o\
 	../../../common/crc.o\
 	../../../common/crc8.o\
 	../../../common/aes.o \
+	../../../common/vscpmd5.c\
 	../../../common/mongoose.o\
 	../../../common/fastpbkdf2.o\
 	../../../common/vscpbase64.o\
@@ -92,6 +93,7 @@ PROJOBJS = ../vscphelperlib.h\
 	../../common/guid.o\
 	../../../common/crc8.o\
 	../../../common/aes.o\
+	../../../common/vscpmd5.c\
 	../../../common/mongoose.o\
 	../../../common/fastpbkdf2.o\
 	../../../common/vscpbase64.o\
@@ -102,6 +104,7 @@ ALWAYS_BUILD = ../../common/vscpremotetcpif.o\
 	../../../common/crc.o\
 	../../../common/crc8.o\
 	../../../common/aes.o\
+	../../../common/vscpmd5.c\
 	../../../common/mongoose.o\
 	../../../common/fastpbkdf2.o\
 	../../../common/vscpbase64.o\
