--- a/src/vscp/vscpworks/Makefile.in
+++ b/src/vscp/vscpworks/Makefile.in
@@ -98,6 +98,7 @@ VSCPWORKS_OBJECTS =  vscpworks.o dlgvscpmsg.o \
 	../../common/mongoose.o \
 	../../common/fastpbkdf2.o \
 	../../common/vscpbase64.o \
+	../../common/vscpmd5.c\
 	../common/canalsuperwrapper.o \
 	../common/dllwrapper.o \
 	../common/guid.o \
@@ -117,6 +118,7 @@ ALWAYS_BUILD = ../../common/crc.o \
 	../../common/mongoose.o \
 	../../common/fastpbkdf2.o \
 	../../common/vscpbase64.o \
+	../../common/vscpmd5.c\
 	../common/canalsuperwrapper.o \
 	../common/dllwrapper.o \
 	../common/guid.o \
