--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 install: true
-before-install:
+before-install: ./travis/install_deps.sh
 - sudo apt-get -qq update
 - sudo apt-get install -y build-essential 
 - sudo apt-get install -y install libwxgtk3.0-dev  
