--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 
-before-install: ./travis/install_deps.sh
+before-install:
 - sudo apt-get -qq update
 - sudo apt-get install -y build-essential 
 - sudo apt-get install -y install libwxgtk3.0-dev  
@@ -14,7 +14,7 @@ install:
       PATH=~/.local/bin:${PATH};
       pip install --user --upgrade pip;
       pip install --user cpp-coveralls;
-fi
+  fi
 
 
 before_script:
