--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,20 @@
+#
+# Travis build configuration
+#
+
 language: cpp
 
 before-install:
-- sudo apt-get -qq update
-- sudo apt-get install -y build-essential 
-- sudo apt-get install -y install libwxgtk3.0-dev  
-- sudo apt-get install -y libssl-dev 
-- sudo apt-get install -y libpcap0.8-dev 
-- sudo apt-get install -y libcurl4-openssl-dev 
-- sudo apt-get install -y libpcap-dev 
+  - sudo apt-get -qq update
+  - sudo apt-get install -y build-essential 
+  - sudo apt-get install -y install libwxgtk3.0-dev  
+  - sudo apt-get install -y libssl-dev 
+  - sudo apt-get install -y libpcap0.8-dev 
+  - sudo apt-get install -y libcurl4-openssl-dev 
+  - sudo apt-get install -y libpcap-dev 
 
 install:
-- if [ "${BUILD_TYPE}" == "Coverage" -a "${TRAVIS_OS_NAME}" == "linux" ]; then
+  - if [ "${BUILD_TYPE}" == "Coverage" -a "${TRAVIS_OS_NAME}" == "linux" ]; then
       PATH=~/.local/bin:${PATH};
       pip install --user --upgrade pip;
       pip install --user cpp-coveralls;
