--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,12 @@ before_script:
       apt-cache search gcc | grep "GNU C compiler";
       apt-cache search clang | grep compiler;
     fi
-#- if [[ "${BUILD_TYPE}" == "OSX_OPENSSL_1_1" ]]; then brew install openssl@1.1 ;fi
+  - if [[ "${BUILD_TYPE}" == "OSX_OPENSSL_1_1" ]]; then brew install openssl@1.1 ;fi
+  - sudo apt-get -qq update
+  - sudo apt-get install -y build-essential
+  - sudo apt-get install -y install libwxgtk3.0-dev
+  - sudo apt-get install -y libssl-dev
+  - sudo apt-get install -y libpcap0.8-dev
+  - sudo apt-get install -y libcurl4-openssl-dev
+  - sudo apt-get install -y libpcap-dev
 
