--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ language: cpp
 before-install:
   - sudo apt-get -qq update
   - sudo apt-get install -y build-essential 
-  - sudo apt-get install -y install libwxgtk3.0-dev  
+  - sudo apt-get install -y libwxgtk3.0-dev  
   - sudo apt-get install -y libssl-dev 
   - sudo apt-get install -y libpcap0.8-dev 
   - sudo apt-get install -y libcurl4-openssl-dev 
