--- a/.travis.yml
+++ b/.travis.yml
@@ -40,5 +40,5 @@ before_script:
   - sudo apt-get install -y libcurl4-openssl-dev
   - sudo apt-get install -y libpcap-dev
 
-script: ./configure && make && make install
+script: ./configure && make && sudo make install
 
