--- a/src/vscp/helperlib/linux/Makefile.in
+++ b/src/vscp/helperlib/linux/Makefile.in
@@ -11,6 +11,7 @@ STATIC=@STATIC@
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
+STRIP = strip
 INSTALL = @INSTALL@
 top_srcdir = @top_srcdir@
 top_wxsrcdir = @top_wxsrcdir@
